Add some some more feature of admin and registration and also login with security  product